Fixing bug 244116, unable to delete bookmark folder that is flagged as Dock Menu and cannot remove from the dock. Patch by froodian <stridey@gmail.com>, r=smorgan, sr=pink.